--- a/macro-helper/Cargo.toml
+++ b/macro-helper/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
-name = "c-rs"
+name = "macro-helper"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+proc-macro = true
+
 [dependencies]
-macro-helper = {path = "macro-helper"}
-thiserror = "1.0"
-anyhow = "1.0"
+quote = "1"
+syn = "1"
+proc-macro2 = "1"
